--- a/Frontend/src/components/Livro/livro.css
+++ b/Frontend/src/components/Livro/livro.css
@@ -19,7 +19,10 @@
     top: 0;
     left: 0;
     perspective: 1500px;
-    z-index:3;
+    z-index: 3;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+    transform-origin: left;
 }
 
 .front, .back {
@@ -29,8 +32,6 @@
     height: 100%;
     top: 0;
     left: 0;
-    transform-origin: left;
-    transition: transform 0.5s;
     backface-visibility: hidden;
 }
 
