--- a/Frontend/src/components/Livro/livro.css
+++ b/Frontend/src/components/Livro/livro.css
@@ -35,6 +35,10 @@
     backface-visibility: hidden;
 }
 
+.back {
+    transform: rotateY(180deg);
+}
+
 .front {
     z-index: 2;
     border-left: 3px solid rgba(128, 128, 128, 0.23);
@@ -56,7 +60,7 @@
 /* Efeito página virada */
 .virada {
     transform: rotateY(-180deg);
-    z-index: 1;
+    z-index: 5;
 }
 
 /* Botões */
