--- a/Frontend/src/components/Livro/livro.css
+++ b/Frontend/src/components/Livro/livro.css
@@ -30,14 +30,14 @@
 }
 
 /* Imagem única centralizada verticalmente */
-.imagem-centralizada {
+.imagemCentralizada {
   max-width: 100%;
   max-height: 100%;
   margin: auto;
 }
 
 /* Imagem no topo */
-.imagem-topo {
+.imagemTopo {
   width: 100%;
   margin-bottom: 10px;
 }
@@ -54,13 +54,13 @@
   line-height: 1.4;
 }
 
-/* Linha dentro do parágrafo quebra naturalmente */
+/* Linhas dentro do parágrafo quebram */
 .linha {
   display: block;
 }
 
 /* Palavra grande (título) */
-.palavra-grande {
+.titulo {
   font-size: 1.5em;
   font-weight: bold;
   display: inline-block;
@@ -68,7 +68,7 @@
 }
 
 /* Palavra normal */
-.palavra-normal {
+.palavraNormal {
   font-size: 1em;
 }
 
@@ -98,8 +98,5 @@
 .contracapa {
   width: 100%;
   height: 100%;
-}
-
-.contracapa {
   background-color: #dcdcdc;
 }
