--- a/Frontend/src/Components/InicioJogo/Container.css
+++ b/Frontend/src/Components/InicioJogo/Container.css
@@ -1,4 +1,4 @@
-.container {
+.containerBranco {
   background: white;
   border-radius: 20px;
   padding: 40px;
@@ -6,4 +6,6 @@
   max-width: 400px;
   width: 100%;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
+
