--- a/Frontend/src/Components/InicioJogo/HomeButton.css
+++ b/Frontend/src/Components/InicioJogo/HomeButton.css
@@ -1,4 +1,4 @@
-.home-button {
+/* .home-button {
   position: absolute;
   top: 20px;
   left: 20px;
@@ -15,4 +15,4 @@
 
 .home-button:hover {
   transform: scale(1.05);
-}
+} */
