--- a/Frontend/src/components/Livro/livro.css
+++ b/Frontend/src/components/Livro/livro.css
@@ -20,7 +20,7 @@
 
 /* Imagem única centralizada verticalmente */
 .imagemCentralizada {
-  max-width: 80%; 
+  max-width: 60%; 
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -42,13 +42,13 @@
 .paragrafo {
   text-indent: 1.5em;
   line-height: 1.5;
+  margin-bottom: 1rem;
 }
 
 /* Palavra grande (título) */
 .titulo {
   font-size: 1.3em;
   font-weight: bold;
-  margin-bottom: 0.5rem; /* separa visualmente títulos das próximas palavras */
 }
 
 /* Palavra normal */
@@ -87,5 +87,5 @@
 .contracapa {
   width: 100%;
   height: 100%;
-  background-color: #277e96;
+  background-color: #fff;
 }
