--- a/Frontend/src/Components/InicioJogo/Container.css
+++ b/Frontend/src/Components/InicioJogo/Container.css
@@ -1,11 +1,25 @@
-.containerBranco {
-  background: white;
-  border-radius: 20px;
-  padding: 40px;
-  text-align: center;
-  max-width: 400px;
-  width: 100%;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  z-index: 1;
+.white-container {
+  background: #f5f5f5;
+  border-radius: 60px;
+  padding: 3rem 3rem;
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.15);
+  max-width: 1200px;
+  border: 1px solid black;
+  width: 60%;
+  height: 84% ;
+  position: relative;
+  z-index: 5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  opacity: 0.9;
 }
 
+@media (max-width: 768px) {
+  .white-container {
+    padding: 2rem 3rem;
+    border-radius: 40px;
+    width: 95%;
+  }
+}
