--- a/Frontend/src/Components/CardsHome/Cards.css
+++ b/Frontend/src/Components/CardsHome/Cards.css
@@ -1,14 +1,15 @@
 .cards {
     display: flex;
-    justify-content: center;
-    gap: 3rem;
-    margin-top: 15rem;
+    justify-content: space-between;
+    gap: 8rem;
+    margin-top: 4rem;
+    margin-left: 50%;
 }
 
 .card {
     position: relative;
-    width: 250px;
-    height: 320px;
+    width: 280px;
+    height: 350px;
     background: linear-gradient(to bottom, #1B3778, #3266DE);
     border-radius: 16px;
     box-shadow: 0 6px 15px rgba(0,0,0,0.15);
@@ -18,6 +19,7 @@
     padding-bottom: 2rem;
     overflow: visible;
     transition: transform 0.5s ease;
+    z-index: 100;
 }
 
 .card:hover { 
@@ -54,7 +56,7 @@
     border: 2px solid var(--branco);
     border-radius: 30px;
     padding: 0.8rem 2rem;
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: bold;
     text-transform: uppercase;
     display: flex;
@@ -70,29 +72,4 @@
     box-shadow: 0 0 12px 4px rgba(255, 255, 255, 0.7);
 }
 
-/* Cantos decorativos */
-.canto {
-    position: absolute;
-    width: 50px;
-    height: 70px;
-    border: 2px solid #1E57D9;
-}
-
-/* .canto.topoEsquerdo {
-    top: -20px;
-    left: -20px;
-    border-right: none;
-    border-bottom: none;
-    border-radius: 10px;
-    border-width: 3px;
-}
-
-.canto.topoDireito {
-    bottom: -10px;
-    right: -10px;
-    border-left: none;
-    border-top: none;
-    border-radius: 10px;
-    border-width: 3px;
-} */
 
