--- a/Frontend/src/pages/Home/Home.css
+++ b/Frontend/src/pages/Home/Home.css
@@ -25,20 +25,21 @@
 
 .titulos {
     font-family: var(--fonte-primaria);
-    font-size: 3.5rem;
+    font-size: 2.8rem;
     font-weight: 700;
     line-height: 1.06;
     text-transform: uppercase;
     text-align: justify;
     margin-left: 12%;
+    margin-bottom: 50vh;
 }
 
 .fada img {
-    max-width: 85%;
-    margin-top: -15vh;
+    max-width: 100%;
+    margin-top: 4vh;
+    margin-right: 50vh;
     height: 150vh;
-    object-fit: contain;
-    float: left;
+    object-fit:fill;
 }
 
 .estrela1 {
@@ -54,7 +55,7 @@
     width: 80vh;
     height: 5vh;
     top: 50vh;
-    left: -10vh;  
+    left: -20vh;  
 }
 
 .estrela3 {
@@ -105,86 +106,101 @@
     transform: scaleX(-1);
 }
 
-.nuvem3,
-.nuvem4,
-.nuvem5 {
-    position: absolute;
-    bottom: -1px;
-    width: auto;
-    max-width: 100%;
-    height: 180px;
-    object-fit: contain;
-}
-
-.nuvem3 {
-    left: 0;
-    transform: scaleX(-1);
-}
-
-.nuvem4 {
-    left: 50%;
-    transform: translateX(-50%);
-}
 
 .bolinha1 {
     position: absolute;
-    
+    left: 40vh;
+    margin-top: 15vh;
+}
+
+.bolinha2 {
+    position: absolute;
+    left: 70vh;
+    margin-top: 40vh;
 }
 
 .scroll {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
+    left: 50%;
+    top: 65%;
+    transform: translateX(-50%);
     border-radius: 50%;
-    border-color: var(--cor-branco);
-    background: var(--azul-escuro);
+    border: 2px solid var(--branco);
+    background: #1B3778;
     font-size: 1.5rem;
-    color: var(--cor-branco);
-    display: block;
-    align-self: flex-end;
+    color: var(--branco);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
+    position: absolute;
+    z-index: 100;
 }
 
-.scroll:hover {
-    transform: scale(1.2);
-}
 
-.secaoCard {
+.secaoCards {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     background-color: var(--branco);
-    padding-bottom: 100px;
-}
-
-.nuvens {
-    position: relative;
-    width: 100%;
-    margin-top: -50%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-}
-
-.nuvens img {
-    height: 180px;
-    width: auto;
-    object-fit: contain;
+    padding-bottom: 2rem 0px;
 }
 
 #nuvemSecao1 {
-    position: relative;
-    transform: scaleY(-1);
+  display: flex;
+  position: absolute;
+  transform: scaleX(-1);
+  left: -60vh;
+  top: -35vh;
+  width: 100%;
+  height: 120%;
 }
 
 #nuvemSecao2 {
-    position: relative;
-    transform: scaleY(-1) rotate(5deg); 
+  display: flex;
+  position: absolute;
+  transform: scaleX(-1);
+  right: -50vh;
+  top: -40vh;
+  width: 100%;
+  height: 120%;
 }
 
 #nuvemSecao3 {
-    transform: scaleY(-1) rotate(-5deg);
-}   
+    display: flex;
+    position: absolute;
+    transform: scaleY(-1);
+    width: 80%;
+    height: 80%;
+    top: 85%;
+    left: -50vh;
+}
+
+#nuvemSecao5 {
+    display: flex;
+    position: absolute;
+    transform: scaleY(-1);
+    transform: rotate(180deg);
+    width: 50%;
+    height: 80%;
+    right: -14vh;
+    top: 55vh;
+}
+
+#nuvemSecao6 {
+    display: flex;
+    position: absolute;
+    transform: scaleY(-1);
+    transform: rotate(160deg);
+    top: 70vh;
+    width: 150%;
+    height: 65%;
+    left: -60vh;
+    right: 150vh;
+}
+ 
 
 .paginaFada {
     background: linear-gradient(to bottom, #FFD4D1, #FFB3C8, #D97AA2);
@@ -192,28 +208,56 @@
 
 #fadaPerfil {
     position: absolute;
-    margin-top: 20vh;
-    margin-left: 10vh;
+    margin-top: 50vh;
+    margin-left: 20vh;
+    width: 80vh;
+    height: 40vh;
+}
+
+#fadaPerfil2 {
+    position: absolute;
+    top: 400vh;       /* controla vertical */
+    right: 30vh;      /* em vez de margin-left */
     width: 80vh;
     height: 40vh;
 }
 
 #decoracaoTexto {
-    display: block;
-    margin-top: 10vh;
-    margin-left: 2vh;
+    display: flex;
+    margin-top: 20vh;
+    margin-left: -12vh;
     position: relative;
-    width: 250vh;
+    width: 300vh;
     height: 100vh;
+    top: 40vh;
 }
 
+#decoracaoTexto2 {
+    display: flex;
+    margin-top: -30vh;
+    margin-left: -50vh;
+    position: relative;
+    width: 200vh;
+    height: 90vh;
+    top: 40vh;
+}
+
+
 .caixaTexto {
+    position: relative;
     display: flex;
     flex-direction: column;
-    align-items: justify;
-    gap: 8px;
-    width: 90vh;
-    height: 20vh;
+    justify-content: center;
+    text-align: left;
+    margin: auto;
+    gap: 2px;
+    padding: 50px;
+    width: 70vh;
+    height: 30vh;
     background: var(--branco);
     border-radius: 16px;
+    z-index: 100;
+    font-size: 16px;
+    bottom: 25vh;
+    left: 35vh;
 }
