--- a/Frontend/src/Components/CardsHome/Cards.css
+++ b/Frontend/src/Components/CardsHome/Cards.css
@@ -12,7 +12,7 @@
     height: 350px;
     background: linear-gradient(to bottom, #1B3778, #3266DE);
     border-radius: 16px;
-    box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -22,7 +22,7 @@
     z-index: 100;
 }
 
-.card:hover { 
+.card:hover {
     transform: scale(1.03);
 }
 
@@ -71,5 +71,3 @@
 .btnCard:hover {
     box-shadow: 0 0 12px 4px rgba(255, 255, 255, 0.7);
 }
-
-
