--- a/Frontend/src/components/Livro/livro.css
+++ b/Frontend/src/components/Livro/livro.css
@@ -1,4 +1,23 @@
-/* Página */
+/* Conteúdo principal */
+#mainLivro {
+    min-height: 100dvh;
+    width: 100%;
+    background-image: url("/assets/LivroFundo.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: min(2rem);
+}
+
+#mainLivro h2 {
+  color: #fff;
+}
+
+/* Páginas */
 .pagina {
   width: 100%;
   height: 100%;
@@ -7,8 +26,32 @@
   flex-direction: column;
   background-color: #fff;
   position: relative;
-  border-radius: 5px;
-  box-shadow: 0 4px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.pagina.pagDireita, .pagina.capa {
+  border-radius: 0px 5px 5px 0;
+}
+
+.pagina.pagEsquerda, .pagina.contracapa {
+  border-radius: 5px 0 0 5px;
+}
+
+.pagina.capa {
+  padding: 0;
+}
+
+.capa img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0 5px 5px 0;
+}
+
+.contracapa {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
 }
 
 /* Container de imagens */
@@ -45,7 +88,7 @@
   margin-bottom: 1rem;
 }
 
-/* Palavra grande (título) */
+/* Título */
 .titulo {
   font-size: 1.3em;
   font-weight: bold;
@@ -57,22 +100,36 @@
   font-family: Times, serif !important;
 }
 
-/* Capa */
-.pagina.capa {
-  border-radius: 0 5px 5px 0;
-  padding: 0;
+/* Botões do livro */
+.btnLivro {
+  background: transparent;
+  border: 3px solid #fff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: transform 0.2s ease, border-color 0.2s ease;
 }
 
-.capa img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 0 5px 5px 0;
+.btnLivro svg {
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  transition: transform 0.2s ease;
 }
 
-/* Contracapa */
-.contracapa {
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
+.btnLivro:hover {
+  transform: scale(1.2);
+}
+
+.btnLivro:hover svg {
+  transform: scale(1.2);
+}
+
+/* Palavra destacada */
+.highlight {
+  background-color: pink;
 }
