--- a/Frontend/src/Components/HeaderLivro/HeaderLivro.css
+++ b/Frontend/src/Components/HeaderLivro/HeaderLivro.css
@@ -142,3 +142,11 @@
 .PencilButton:hover svg {
   transform: scale(1.2);
 }
+
+/* Retirar spinners do input de número */
+input[type=number]::-webkit-outer-spin-button, input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
