--- a/Frontend/src/components/Livro/livro.css
+++ b/Frontend/src/components/Livro/livro.css
@@ -136,9 +136,9 @@
 
 /* Palavra destacada */
 .highlight {
-  background-color: pink;
+  background-color: #6f81c3;
 }
 
 .modoGrifar span:hover {
-  background-color: rgb(239, 198, 205);
+  background-color: #919cc6;
 }
