--- a/Frontend/src/pages/PlayJogo/Inicio.css
+++ b/Frontend/src/pages/PlayJogo/Inicio.css
@@ -16,7 +16,8 @@
 
 button,
 a {
-  text-decoration: none; /* Remove sublinhado de links */
+  text-decoration: none;
+  /* Remove sublinhado de links */
   outline: none;
 }
 
@@ -77,17 +78,26 @@ a {
 }
 
 .title {
-  margin-top: 20px;
+  margin-top: 30%;
   margin-bottom: -0.5rem;
+}
+
+.title2 {
+  margin-top: 15%;
+  font-size: 3.3rem;
+  font-weight: 500;
+  color: #1a1a1a;
 }
 
 .subtitle {
   margin-bottom: 40px;
+
 }
 
 /* ---- Container dos botões ---- */
 .buttons-container {
   display: flex;
+  margin-top: 0%;
   flex-direction: column;
   gap: 1.5rem;
 }
@@ -108,23 +118,18 @@ a {
 /* ============================================
    TEXTOS E PARÁGRAFOS
    ============================================ */
-.paragrafo,
-.paragrafo2 {
+.paragrafo {
   font-size: 23px;
   text-align: justify;
   line-height: 1.8;
   color: #1a1a1a;
   padding: 10px;
   max-width: 70%;
+  margin-top: 2%;
+  margin-bottom: 5%;
+
 }
 
-.paragrafo {
-  margin: 20px 0;
-}
-
-.paragrafo2 {
-  margin: 40px 0;
-}
 
 /* ============================================
    ÍCONES
